--- a/_posts/0000-01-02-jamesuhl.md
+++ b/_posts/0000-01-02-jamesuhl.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to jamesuhl Slide!"
 ---
-This is jamesuhl's slide
+This is James Uhl's awesome slide
 Use the left arrow to go back!
