Make line 5 different

--- a/_posts/0000-01-02-jamesuhl.md
+++ b/_posts/0000-01-02-jamesuhl.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to jamesuhl Slide!"
+title: "Welcome to jamesuhl Slide!" !tada!
 ---
-This is James Uhl's awesome slide
+This is James Uhl's awesome slide 
 Use the left arrow to go back!
